Fix overflowing text in dialogs in some cases
An example was GitHub commit links.
Reported here: https://t.me/DIBgramChat/1667

--- a/src/dibgram/ui/dialog/confirm-dialog.scss
+++ b/src/dibgram/ui/dialog/confirm-dialog.scss
@@ -21,6 +21,7 @@
             margin: 10px;
             margin-bottom: 20px;
             user-select: none;
+            word-wrap: break-word;
 
             &.large-font {
                 font-size: 14px;
